# genkimart

./: Makefile
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  gunicorn.conf.py  pyproject.toml
backend/apps/cart/: apps.py  filters.py  serializers.py  services.py  urls.py  views.py
backend/apps/cart/management/commands/: checkout_dummy.py
backend/apps/cart/migrations/: 0001_initial.py
backend/apps/catalog/: filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/catalog/management/commands/: dummy.py  dummy_catalog.py
backend/apps/catalog/migrations/: 0001_initial.py
backend/apps/checkout/: apps.py  exceptions.py  filters.py  middleware.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/checkout/management/commands/: checkout_dummy.py
backend/apps/checkout/migrations/: 0001_initial.py
backend/apps/common/: models.py
backend/apps/common/migrations/: 0001_initial.py
backend/apps/orders/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py
backend/apps/payments/: models.py
backend/apps/payments/migrations/: 0001_initial.py
backend/config/: adapters.py  asgi.py  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/spec/: openaip.yaml
deploy/: compose.dev.yml  compose.prod.yml
deploy/nginx/: nginx.conf
env/: .env.example
frontend/: .dockerignore  .env.example  Dockerfile.dev  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  (+1 more)
(+42 files in other folders)
