[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.12.12",
]
